2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* src/.cvsignore:
	* src/Makefile.am:
	Add .cvsignore files
	Switch _la_CFLAGS for AM_CFLAGS to clean up directory

2005-05-17    <ssp@aware-of-vacuity.boston.redhat.com>

	* configure.ac: Remove rest of half-removed if statement

	* ChangeLog: remove irrelevant entries

2005-04-16  Josh Triplett  <josh@freedesktop.org>

	* Makefile.am: Tell automake about the manpage.